--- a/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
+++ b/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
@@ -1,29 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  
   <Import Project="..\..\vostok.devtools\library-common-props\Main-Project.props" />
   <Import Project="..\..\vostok.devtools\git-commit-to-assembly-title\Vostok.Tools.GitCommit2AssemblyTitle.props" />
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Configurations>Debug;Release</Configurations>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-
   <PropertyGroup>
     <VersionPrefix>0.0.1</VersionPrefix>
   </PropertyGroup>
-
   <PropertyGroup>
     <Title>Vostok.ZooKeeper.Client</Title>
     <Description>Vostok.ZooKeeper.Client</Description>
   </PropertyGroup>
-
   <PropertyGroup>
     <PackageProjectUrl>https://github.com/vostok/zookeeper.client</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/vostok/zookeeper.client/blob/master/LICENSE</PackageLicenseUrl>
     <PackageTags>vostok</PackageTags>
     <RepositoryUrl>https://github.com/vostok/zookeeper.client</RepositoryUrl>
   </PropertyGroup>
-  
+  <ItemGroup>
+    <PackageReference Include="ZooKeeperNetEx" Version="3.4.12.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Vostok.ZooKeeper.Client.Abstractions">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\vostok.zookeeper.client.abstractions\Vostok.ZooKeeper.Client.Abstractions\bin\Release\netstandard2.0\Vostok.ZooKeeper.Client.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Vostok.Logging.Abstractions">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\vostok.logging.abstractions\Vostok.Logging.Abstractions\bin\Release\netstandard2.0\Vostok.Logging.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
