--- a/module.yaml
+++ b/module.yaml
@@ -9,6 +9,7 @@ notests *default:
     - Vostok.ZooKeeper.Client/bin/Release/netstandard2.0/Vostok.ZooKeeper.Client.dll
 
   deps:
+    - vostok.commons.time
     - vostok.logging.context
     - vostok.logging.abstractions
     - vostok.zookeeper.client.abstractions
