thread not safe ClientHolder implementation

--- a/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
+++ b/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
@@ -21,6 +21,7 @@
     <RepositoryUrl>https://github.com/vostok/zookeeper.client</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
     <PackageReference Include="ZooKeeperNetEx" Version="3.4.12.1" />
   </ItemGroup>
   <ItemGroup>
