--- a/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
+++ b/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
@@ -27,6 +27,7 @@
     <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Observable\CachingObservable.cs" Link="Commons\CachingObservable.cs" />
     <Compile Include="..\..\vostok.commons.time\Vostok.Commons.Time\TimeBudget.cs" Link="Commons\TimeBudget.cs" />
     <Compile Include="..\..\vostok.commons.time\Vostok.Commons.Time\TimeSpanConversions.cs" Link="Commons\TimeSpanConversions.cs" />
+    <Compile Include="..\..\vostok.commons.threading\Vostok.Commons.Threading\AtomicBoolean.cs" Link="Commons\AtomicBoolean.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Vostok.ZooKeeper.Client.Abstractions">
