--- a/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
+++ b/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
@@ -18,6 +18,7 @@
     <PackageProjectUrl>https://github.com/vostok/zookeeper.client</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/vostok/zookeeper.client/blob/master/LICENSE</PackageLicenseUrl>
     <PackageTags>vostok vostok.zookeeper</PackageTags>
+    <PackageReleaseNotes>https://github.com/vostok/zookeeper.client/blob/master/CHANGELOG.md</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/vostok/zookeeper.client</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
