--- a/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
+++ b/Vostok.ZooKeeper.Client/Vostok.ZooKeeper.Client.csproj
@@ -7,6 +7,7 @@
     <Configurations>Debug;Release</Configurations>
     <LangVersion>7.2</LangVersion>
     <DebugType>full</DebugType>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <PropertyGroup>
     <VersionPrefix>0.1.4</VersionPrefix>
@@ -32,6 +33,7 @@
     <Compile Include="..\..\vostok.commons.time\Vostok.Commons.Time\TimeSpanConversions.cs" Link="Commons\TimeSpanConversions.cs" />
     <Compile Include="..\..\vostok.commons.threading\Vostok.Commons.Threading\AtomicBoolean.cs" Link="Commons\AtomicBoolean.cs" />
   </ItemGroup>
+
   <ItemGroup>
     <Reference Include="Vostok.ZooKeeper.Client.Abstractions">
       <SpecificVersion>False</SpecificVersion>
@@ -45,46 +47,19 @@
 
   <ItemGroup>
     <PackageReference Include="ZooKeeperNetEx" Version="3.4.12.1" PrivateAssets="all" />
-    <PackageReference Update="@(PackageReference)">
-      <PrivateAssets>All</PrivateAssets>
-      <Publish Condition=" '%(PackageReference.Publish)' != 'false' ">true</Publish>
-    </PackageReference>
   </ItemGroup>
-  <PropertyGroup Condition="'$(OS)' == 'Windows_NT'">
-    <ILRepackExecutable>"$(MSBuildThisFileDirectory)..\..\vostok.devtools.ilrepack.bin\net40\ILRepack.exe"</ILRepackExecutable>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(OS)' != 'Windows_NT'">
-    <ILRepackExecutable>dotnet "$(MSBuildThisFileDirectory)../../vostok.devtools.ilrepack.bin/netcoreapp2.1/ILRepack.Core.dll"</ILRepackExecutable>
-  </PropertyGroup>
-  <Target Name="RestorePackageReferences" BeforeTargets="Build">
-    <ItemGroup>
-      <PackageReference Remove="ZooKeeperNetEx" />
-      <PackageReference Include="ZooKeeperNetEx" Version="3.4.12.1" />
-    </ItemGroup>
-  </Target>
-  <Target Name="SetupILRepackProperties" AfterTargets="Build">
+
+  <Target Name="RepackAssemblies" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
     <PropertyGroup>
-      <PubDirWithoutSlash>$(ProjectDir)bin\Publish\$(TargetFramework)\publish</PubDirWithoutSlash>
-      <PubDir>$(PubDirWithoutSlash)\</PubDir>
+      <ILRepackExecutable>dotnet "$(MSBuildThisFileDirectory)../../vostok.devtools.ilrepack.bin/netcoreapp2.1/ILRepack.Core.dll"</ILRepackExecutable>
+      <BinPath>$(ProjectDir)$(OutputPath)</BinPath>
+      <ResultAssembly>$(BinPath)$(AssemblyName).dll</ResultAssembly>
     </PropertyGroup>
-  </Target>
-  <Target Name="CleanPublishDir" AfterTargets="SetupILRepackProperties" Condition="'$(Configuration)' != 'Publish'">
     <ItemGroup>
-      <OldPubDirFiles Include="$(PubDir)**/*" />
+      <MergeAssemblies Include="$(BinPath)ZooKeeperNetEx.dll" />
+      <MergeAssemblies Include="$(BinPath)System*.dll" />
     </ItemGroup>
-    <Delete Files="@(OldPubDirFiles)" />
-  </Target>
-  <Target Name="Publishing" AfterTargets="SetupILRepackProperties" Condition="'$(Configuration)' != 'Publish'">
-    <Exec WorkingDirectory="$(ProjectDir)" Command="dotnet publish -c Publish -f $(TargetFramework)" />
-  </Target>
-  <Target Name="RepackAssemblies" AfterTargets="Publishing" Condition="'$(Configuration)' != 'Publish'">
-    <ItemGroup>
-      <MergeAssemblies Include="$(ProjectDir)$(OutputPath)$(AssemblyName).dll" />
-      <MergeAssemblies Include="$(PubDir)*.dll" />
-      <MergeAssemblies Remove="$(PubDir)$(AssemblyName).dll" />
-      <MergeAssemblies Remove="$(PubDir)Vostok.Logging.Abstractions.dll" />
-      <MergeAssemblies Remove="$(PubDir)Vostok.ZooKeeper.Client.Abstractions.dll" />
-    </ItemGroup>
-    <Exec WorkingDirectory="$(PubDir)" Command="$(ILRepackExecutable) /internalize /renameInternalized /log:ilrepack.log /lib:&quot;$(PubDirWithoutSlash)&quot; /out:$(ProjectDir)$(OutputPath)$(AssemblyName).dll @(MergeAssemblies->'%(RelativeDir)%(FileName)%(Extension)', ' ')" />
+    <Exec WorkingDirectory="$(BinPath)" Command="$(ILRepackExecutable) /internalize /renameInternalized /out:$(ResultAssembly) $(ResultAssembly) @(MergeAssemblies->'%(RelativeDir)%(FileName)%(Extension)', ' ')" />
+    <Delete Files="@(MergeAssemblies)"/>
   </Target>
 </Project>
