--- a/module.yaml
+++ b/module.yaml
@@ -10,6 +10,8 @@ notests *default:
     - module vostok.zookeeper.client.abstractions
 
   deps:
+    - vostok.tracing.extensions
+    - vostok.tracing.abstractions
     - vostok.commons.time/src
     - vostok.commons.helpers/src
     - vostok.commons.threading/src
