--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       
     - name: Install .NET Core
-      uses: actions/setup-dotnet@v1.4.0
+      uses: actions/setup-dotnet@main
       
     - name: Download Cement
       run: | 
@@ -41,7 +41,7 @@ jobs:
       if: runner.os == 'Windows'
     
     - name: Checkout
-      uses: actions/checkout@v2.0.0
+      uses: actions/checkout@main
       with:
         path: vostok.module
         
