--- a/Vostok.ZooKeeper.Client.Tests/Vostok.ZooKeeper.Client.Tests.csproj
+++ b/Vostok.ZooKeeper.Client.Tests/Vostok.ZooKeeper.Client.Tests.csproj
@@ -4,7 +4,7 @@
   <Import Project="..\..\vostok.devtools\git-commit-to-assembly-title\Vostok.Tools.GitCommit2AssemblyTitle.props" />
   <PropertyGroup>
     <TargetFrameworks>net6.0;netcoreapp3.1;net471</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">net6.0;netcoreapp3.1</TargetFrameworks>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
