--- a/Vostok.ZooKeeper.Client.Tests/Vostok.ZooKeeper.Client.Tests.csproj
+++ b/Vostok.ZooKeeper.Client.Tests/Vostok.ZooKeeper.Client.Tests.csproj
@@ -26,35 +26,35 @@
   <ItemGroup>
     <Reference Include="Vostok.ZooKeeper.LocalEnsemble">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.zookeeper.localensemble\Vostok.ZooKeeper.LocalEnsemble\bin\Release\netstandard2.0\Vostok.ZooKeeper.LocalEnsemble.dll</HintPath>
+      <HintPath>..\..\vostok.zookeeper.localensemble\Vostok.ZooKeeper.LocalEnsemble\bin\Release\$(ReferencesFramework)\Vostok.ZooKeeper.LocalEnsemble.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.Logging.Abstractions">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.logging.abstractions\Vostok.Logging.Abstractions\bin\Release\netstandard2.0\Vostok.Logging.Abstractions.dll</HintPath>
+      <HintPath>..\..\vostok.logging.abstractions\Vostok.Logging.Abstractions\bin\Release\$(ReferencesFramework)\Vostok.Logging.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.Logging.Console">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.logging.console\Vostok.Logging.Console\bin\Release\netstandard2.0\Vostok.Logging.Console.dll</HintPath>
+      <HintPath>..\..\vostok.logging.console\Vostok.Logging.Console\bin\Release\$(ReferencesFramework)\Vostok.Logging.Console.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.ZooKeeper.Client.Abstractions">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.zookeeper.client.abstractions\Vostok.ZooKeeper.Client.Abstractions\bin\Release\netstandard2.0\Vostok.ZooKeeper.Client.Abstractions.dll</HintPath>
+      <HintPath>..\..\vostok.zookeeper.client.abstractions\Vostok.ZooKeeper.Client.Abstractions\bin\Release\$(ReferencesFramework)\Vostok.ZooKeeper.Client.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.ZooKeeper.Testing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.zookeeper.testing\Vostok.ZooKeeper.Testing\bin\Release\netstandard2.0\Vostok.ZooKeeper.Testing.dll</HintPath>
+      <HintPath>..\..\vostok.zookeeper.testing\Vostok.ZooKeeper.Testing\bin\Release\$(ReferencesFramework)\Vostok.ZooKeeper.Testing.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.Tracing.Abstractions">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.tracing.abstractions\Vostok.Tracing.Abstractions\bin\Release\netstandard2.0\Vostok.Tracing.Abstractions.dll</HintPath>
+      <HintPath>..\..\vostok.tracing.abstractions\Vostok.Tracing.Abstractions\bin\Release\$(ReferencesFramework)\Vostok.Tracing.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.Tracing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.tracing\Vostok.Tracing\bin\Release\netstandard2.0\Vostok.Tracing.dll</HintPath>
+      <HintPath>..\..\vostok.tracing\Vostok.Tracing\bin\Release\$(ReferencesFramework)\Vostok.Tracing.dll</HintPath>
     </Reference>
     <Reference Include="Vostok.Logging.File">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.logging.file\Vostok.Logging.File\bin\Release\netstandard2.0\Vostok.Logging.File.dll</HintPath>
+      <HintPath>..\..\vostok.logging.file\Vostok.Logging.File\bin\Release\$(ReferencesFramework)\Vostok.Logging.File.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
