--- a/module.yaml
+++ b/module.yaml
@@ -14,6 +14,7 @@ notests *default:
     - vostok.commons.time/src
     - vostok.commons.helpers/src
     - vostok.commons.threading/src
+    - vostok.commons.formatting/src
     - vostok.logging.abstractions
     - vostok.zookeeper.client.abstractions
     - vostok.devtools
